5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2506.log
== SUBMITION (2019-05-09 16:41:08) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.182134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:11) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.167078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:11) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.200031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:12) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.261204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:13) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.169518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:13) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.202876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:41:13) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.280337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:43:36) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(dia)
-- EXECUTION TIME:
0.139828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:43:50) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(dia)
-- EXECUTION TIME:
0.196283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:43:56) 
-- CODE:

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(dia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (V > 0 and H > 0):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:54:53) 
-- CODE:
p = int(input("Peixes: "))
C = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 1

# Laco de acumulacao
while (p > 0 and v > 12000):
	p = p + (t*v/100)
	V = 2 * V - M
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.202784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 9, in <module>
    while (p > 0 and v > 12000):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:37) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	V = 2 * V - M
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:41) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	V = 2 * V - M
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:55:42) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	V = 2 * V - M
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.13124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:56:00) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.218052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:56:02) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.175399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:56:04) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.138022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:56:19) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.13069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 14, in <module>
    if (t <= 0):
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:56:30) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (t*v/100)
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if (t <= 0):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:08) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (p*v/100)
	anos = anos + 1

if (t <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if (t <= 0):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:23) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
V = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (p*v/100)
	anos = anos + 1

if (p <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- OUTPUT:
LIMITE
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:34) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
v = int(input("Vendas: "))

# Variavel contadora
anos = 2

# Laco de acumulacao
while (p > 0 and p > 12000):
	p = p + (p*v/100)
	anos = anos + 1

if (p <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- OUTPUT:
LIMITE
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:55:24) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
v = int(input("Vendas: "))

# Variavel contadora
anos = 0

# Laco de acumulacao
while (p > 0 and p < 12000):
	p = p + (p*c/100)-v
	anos = anos + 1

if (p <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:55:51) 
-- CODE:
p = int(input("Peixes: "))
c = int(input("Fracao: "))
v = int(input("Vendas: "))

# Variavel contadora
anos = 0

# Laco de acumulacao
while (p > 0 and p < 12000):
	p = p + (p*c/100)-v
	anos = anos + 1

if (p <= 0):
	msg = "EXTINCAO"
else:
	msg = "LIMITE"
print(msg)
print(anos)
-- EXECUTION TIME:
0.139514
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
